Add Font Awesome script to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <link rel="stylesheet" href="files/swiper-bundle.min.css">
     <script src="files/swiper-bundle.min.js.download"></script>
+	<script src="https://kit.fontawesome.com/3ab4788552.js" crossorigin="anonymous"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const firstDropdown = document.getElementById('first-dropdown');
