--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="keywords" content="Odbory plus">
     <meta name="description" content="Odbory plus">
     <title>Odbory plus</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="files/175.873d3437.css">
     <link rel="stylesheet" href="files/app.1a5c9992.css">
     <link rel="stylesheet" href="files/css_ed.css">
@@ -29,7 +30,6 @@
 
     <link rel="stylesheet" href="files/swiper-bundle.min.css">
     <script src="files/swiper-bundle.min.js.download"></script>
-
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const firstDropdown = document.getElementById('first-dropdown');
